
noinst_LTLIBRARIES = \
    liblang.la

liblang_la_SOURCES = \
    Reference.cxx \
    Implementation.cxx \
    Object.cxx \
    Pointer.cxx \
    System.cxx \
    Exception.cxx \
    NullPointerException.cxx \
    NumberFormatException.cxx \
    IndexOutOfBoundsException.cxx \
    IllegalArgumentException.cxx \
    RegisterElement.cxx \
    StackTraceElement.cxx \
    ByteArray.cxx \
    Number.cxx \
    Integer.cxx \
    Long.cxx \
    Double.cxx \
    Character.cxx \
    Class.cxx \
    Thread.cxx \
    String.cxx

liblang_la_CXXFLAGS = \
    -I$(top_srcdir)/include \
    $(DEBUG_FLAG)

liblang_la_includedir = \
    $(includedir)/jam/lang

liblang_la_include_HEADERS = \
    $(top_srcdir)/include/jam/lang/Reference.hxx \
    $(top_srcdir)/include/jam/lang/Implementation.hxx \
    $(top_srcdir)/include/jam/lang/Object.hxx \
    $(top_srcdir)/include/jam/lang/Pointer.hxx \
    $(top_srcdir)/include/jam/lang/System.hxx \
    $(top_srcdir)/include/jam/lang/Exception.hxx \
    $(top_srcdir)/include/jam/lang/NullPointerException.hxx \
    $(top_srcdir)/include/jam/lang/NumberFormatException.hxx \
    $(top_srcdir)/include/jam/lang/IndexOutOfBoundsException.hxx \
    $(top_srcdir)/include/jam/lang/IllegalArgumentException.hxx \
    $(top_srcdir)/include/jam/lang/RegisterElement.hxx \
    $(top_srcdir)/include/jam/lang/StackTraceElement.hxx \
    $(top_srcdir)/include/jam/lang/ByteArray.hxx \
    $(top_srcdir)/include/jam/lang/Number.hxx \
    $(top_srcdir)/include/jam/lang/Integer.hxx \
    $(top_srcdir)/include/jam/lang/Long.hxx \
    $(top_srcdir)/include/jam/lang/Double.hxx \
    $(top_srcdir)/include/jam/lang/Character.hxx \
    $(top_srcdir)/include/jam/lang/Class.hxx \
    $(top_srcdir)/include/jam/lang/Thread.hxx \
    $(top_srcdir)/include/jam/lang/String.hxx
